--- a/cadastrar_entidade.html
+++ b/cadastrar_entidade.html
@@ -174,28 +174,7 @@
 </div>
 </div>
 </div>
-<nav class="fixed bottom-0 left-0 right-0 max-w-[480px] mx-auto bg-white/95 dark:bg-background-dark/95 backdrop-blur-lg border-t border-gray-100 dark:border-gray-800 px-6 py-3 flex justify-between items-center z-[60] pb-safe">
-<a class="flex flex-col items-center gap-1 group text-[#617589] dark:text-gray-400" href="#">
-<span class="material-symbols-outlined text-[24px]">logout</span>
-<span class="text-[10px] font-medium">Sair</span>
-</a>
-<a class="flex flex-col items-center gap-1 group text-primary" href="#">
-<span class="material-symbols-outlined text-[24px]">group</span>
-<span class="text-[10px] font-medium">Entidades</span>
-</a>
-<a class="flex flex-col items-center gap-1 group text-[#617589] dark:text-gray-400" href="#">
-<span class="material-symbols-outlined text-[24px]">payments</span>
-<span class="text-[10px] font-medium">Parcelas</span>
-</a>
-<a class="flex flex-col items-center gap-1 group text-[#617589] dark:text-gray-400" href="#">
-<span class="material-symbols-outlined text-[24px]">dashboard</span>
-<span class="text-[10px] font-medium">Painel</span>
-</a>
-<a class="flex flex-col items-center gap-1 group text-[#617589] dark:text-gray-400" href="#">
-<span class="material-symbols-outlined text-[24px]">settings</span>
-<span class="text-[10px] font-medium">Ajustes</span>
-</a>
-</nav>
+<script src="js/navbar.js"></script>
 </div>
 
 </body></html>
