--- a/lista_bancos.html
+++ b/lista_bancos.html
@@ -135,29 +135,6 @@
 <span class="material-symbols-outlined text-3xl">add</span>
 </button>
 <!-- Bottom Navigation Bar -->
-<nav class="fixed bottom-0 left-1/2 -translate-x-1/2 w-full max-w-[480px] bg-white dark:bg-gray-900 border-t border-gray-200 dark:border-gray-800 px-2 py-3 z-40 flex justify-around items-end">
-<div class="flex flex-col items-center gap-1 group cursor-pointer min-w-[64px]">
-<span class="material-symbols-outlined text-gray-500 dark:text-gray-400 group-hover:text-red-500 transition-colors">logout</span>
-<span class="text-[10px] font-medium text-gray-500 dark:text-gray-400 group-hover:text-red-500">Sair</span>
 </div>
-<div class="flex flex-col items-center gap-1 group cursor-pointer min-w-[64px]">
-<span class="material-symbols-outlined text-gray-500 dark:text-gray-400 group-hover:text-primary transition-colors">corporate_fare</span>
-<span class="text-[10px] font-medium text-gray-500 dark:text-gray-400 group-hover:text-primary">Entidades</span>
-</div>
-<div class="flex flex-col items-center gap-1 group cursor-pointer min-w-[64px]">
-<span class="material-symbols-outlined text-gray-500 dark:text-gray-400 group-hover:text-primary transition-colors">calendar_month</span>
-<span class="text-[10px] font-medium text-gray-500 dark:text-gray-400 group-hover:text-primary">Parcelas</span>
-</div>
-<div class="flex flex-col items-center gap-1 group cursor-pointer min-w-[64px]">
-<div class="bg-primary/10 p-1.5 rounded-lg -mt-1">
-<span class="material-symbols-outlined text-primary">dashboard</span>
-</div>
-<span class="text-[10px] font-bold text-primary">Painel</span>
-</div>
-<div class="flex flex-col items-center gap-1 group cursor-pointer min-w-[64px]">
-<span class="material-symbols-outlined text-gray-500 dark:text-gray-400 group-hover:text-primary transition-colors">settings</span>
-<span class="text-[10px] font-medium text-gray-500 dark:text-gray-400 group-hover:text-primary">Ajustes</span>
-</div>
-</nav>
-</div>
+        <script src="js/navbar.js"></script>
 </body></html>
