--- a/lista_entidades.html
+++ b/lista_entidades.html
@@ -192,27 +192,5 @@
 <button class="fixed bottom-24 right-6 w-14 h-14 bg-primary text-white rounded-full shadow-lg flex items-center justify-center hover:bg-primary/90 active:scale-95 transition-all z-30">
 <span class="material-symbols-outlined text-3xl">add</span>
 </button>
-<nav class="fixed bottom-0 left-0 right-0 bg-white/90 dark:bg-background-dark/90 backdrop-blur-lg border-t border-gray-100 dark:border-gray-800 h-20 flex items-center justify-around px-2 z-20 pb-4">
-<div class="flex flex-col items-center gap-1 text-gray-400 min-w-[64px]">
-<span class="material-symbols-outlined">logout</span>
-<span class="text-[10px] font-medium">Sair</span>
-</div>
-<div class="flex flex-col items-center gap-1 text-primary min-w-[64px]">
-<span class="material-symbols-outlined">group</span>
-<span class="text-[10px] font-medium">Entidades</span>
-</div>
-<div class="flex flex-col items-center gap-1 text-gray-400 min-w-[64px]">
-<span class="material-symbols-outlined">payments</span>
-<span class="text-[10px] font-medium">Parcelas</span>
-</div>
-<div class="flex flex-col items-center gap-1 text-gray-400 min-w-[64px]">
-<span class="material-symbols-outlined">dashboard</span>
-<span class="text-[10px] font-medium">Painel</span>
-</div>
-<div class="flex flex-col items-center gap-1 text-gray-400 min-w-[64px]">
-<span class="material-symbols-outlined">settings</span>
-<span class="text-[10px] font-medium">Ajustes</span>
-</div>
-</nav>
-
+<script src="js/navbar.js"></script>
 </body></html>
