--- a/niveis_acesso.html
+++ b/niveis_acesso.html
@@ -213,29 +213,6 @@
             </button>
 </div>
 </main>
-<nav class="fixed bottom-0 left-0 right-0 bg-white/90 dark:bg-background-dark/90 backdrop-blur-xl border-t border-[#dbe0e6] dark:border-gray-800 pb-[env(safe-area-inset-bottom)]">
-<div class="max-w-[480px] mx-auto flex justify-between px-2 pt-3 pb-6">
-<a class="flex flex-col items-center gap-1 flex-1 text-[#617589]" href="#">
-<span class="material-symbols-outlined text-[24px]">logout</span>
-<span class="text-[10px] font-medium">Sair</span>
-</a>
-<a class="flex flex-col items-center gap-1 flex-1 text-[#617589]" href="#">
-<span class="material-symbols-outlined text-[24px]">group</span>
-<span class="text-[10px] font-medium">Entidades</span>
-</a>
-<a class="flex flex-col items-center gap-1 flex-1 text-[#617589]" href="#">
-<span class="material-symbols-outlined text-[24px]">payments</span>
-<span class="text-[10px] font-medium">Parcelas</span>
-</a>
-<a class="flex flex-col items-center gap-1 flex-1 text-[#617589]" href="#">
-<span class="material-symbols-outlined text-[24px]">dashboard</span>
-<span class="text-[10px] font-medium">Painel</span>
-</a>
-<a class="flex flex-col items-center gap-1 flex-1 text-primary" href="#">
-<span class="material-symbols-outlined text-[24px]" style="font-variation-settings: 'FILL' 1;">settings</span>
-<span class="text-[10px] font-bold">Ajustes</span>
-</a>
-</div>
-</nav>
+<script src="js/navbar.js"></script>
 
 </body></html>
