--- a/ajustes.html
+++ b/ajustes.html
@@ -233,27 +233,6 @@
 </div>
 </section>
 </main>
-<nav class="fixed bottom-0 left-0 right-0 bg-white/90 dark:bg-background-dark/90 backdrop-blur-lg border-t border-gray-100 dark:border-gray-800 h-16 flex items-center justify-around px-2 z-20">
-<div class="flex flex-col items-center gap-1 text-gray-400 cursor-pointer active:scale-95 transition-transform min-w-[64px]">
-<span class="material-symbols-outlined">logout</span>
-<span class="text-[10px] font-medium">Sair</span>
-</div>
-<div class="flex flex-col items-center gap-1 text-gray-400 cursor-pointer active:scale-95 transition-transform min-w-[64px]">
-<span class="material-symbols-outlined">group</span>
-<span class="text-[10px] font-medium">Entidades</span>
-</div>
-<div class="flex flex-col items-center gap-1 text-gray-400 cursor-pointer active:scale-95 transition-transform min-w-[64px]">
-<span class="material-symbols-outlined">payments</span>
-<span class="text-[10px] font-medium">Parcelas</span>
-</div>
-<div class="flex flex-col items-center gap-1 text-gray-400 cursor-pointer active:scale-95 transition-transform min-w-[64px]">
-<span class="material-symbols-outlined">dashboard</span>
-<span class="text-[10px] font-medium">Painel</span>
-</div>
-<div class="flex flex-col items-center gap-1 text-primary cursor-pointer active:scale-95 transition-transform min-w-[64px]">
-<span class="material-symbols-outlined">settings</span>
-<span class="text-[10px] font-medium">Ajustes</span>
-</div>
-</nav>
 
+<script src="js/navbar.js"></script>
 </body></html>
