--- a/financeiro.png.html
+++ b/financeiro.png.html
@@ -246,27 +246,6 @@
 </div>
 </section>
 </main>
-<nav class="fixed bottom-0 left-0 right-0 bg-white/90 dark:bg-background-dark/90 backdrop-blur-lg border-t border-gray-100 dark:border-gray-800 h-20 flex items-center justify-between px-2 z-30">
-<div class="flex flex-1 flex-col items-center gap-1 text-gray-400 active:scale-95 transition-transform cursor-pointer">
-<span class="material-symbols-outlined">logout</span>
-<span class="text-[10px] font-medium">Sair</span>
-</div>
-<div class="flex flex-1 flex-col items-center gap-1 text-gray-400 active:scale-95 transition-transform cursor-pointer">
-<span class="material-symbols-outlined">group</span>
-<span class="text-[10px] font-medium">Entidades</span>
-</div>
-<div class="flex flex-1 flex-col items-center gap-1 text-gray-400 active:scale-95 transition-transform cursor-pointer">
-<span class="material-symbols-outlined">payments</span>
-<span class="text-[10px] font-medium">Parcelas</span>
-</div>
-<div class="flex flex-1 flex-col items-center gap-1 text-primary active:scale-95 transition-transform cursor-pointer">
-<span class="material-symbols-outlined active-icon">dashboard</span>
-<span class="text-[10px] font-bold">Painel</span>
-</div>
-<div class="flex flex-1 flex-col items-center gap-1 text-gray-400 active:scale-95 transition-transform cursor-pointer">
-<span class="material-symbols-outlined">settings</span>
-<span class="text-[10px] font-medium">Ajustes</span>
-</div>
-</nav>
+<script src="js/navbar.js"></script>
 
 </body></html>
