--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="flex flex-col md:flex-row gap-6 items-center mb-6">
                 <img src="https://placehold.co/400x400?text=PDF+Expert" alt="Capa do PDF" class="w-32 h-32 rounded-lg object-cover shadow-sm">
                 <div>
-                    <h2 class="text-xl font-bold text-slate-800">E-book: Criação de PDF Profissional</h2>
-                    <p class="text-slate-600 text-sm">Aprenda a criar documentos interativos e lucrativos do zero.</p>
+                    <h2 class="text-xl font-bold text-slate-800">E-book:Pdf Misterioso</h2>
+                    <p class="text-slate-600 text-sm"> Pode ser qualquer coisa! </p>
                     <p class="text-blue-600 font-bold text-lg mt-2">R$ 2,00 <span class="text-xs text-slate-400 font-normal">/ unidade</span></p>
                 </div>
             </div>
